--- a/src/Dotnet.JsonBenchmark/Dotnet.JsonBenchmark.csproj
+++ b/src/Dotnet.JsonBenchmark/Dotnet.JsonBenchmark.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Jil" Version="2.17.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Npgg.ConsoleTable" Version="1.4.1" />
     <PackageReference Include="System.Text.Json" Version="5.0.1" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
   </ItemGroup>
